--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
+sudo: false
 branches:
   only:
   - master
 language: ruby
-rvm:
-  - 2.0.0
-gemfile: .gemfile
 script:
-  - "rake spec_prep && rake spec_standalone SPEC_OPTS='--format documentation'"
-env:
-  matrix:
-    - PUPPET_GEM_VERSION="~> 3.3"
+  - "bundle exec rake validate && bundle exec rake lint && bundle exec rake spec SPEC_OPTS='--format documentation'"
+matrix:
+  fast_finish: true
+  include:
+  - rvm: 1.8.7
+    env: PUPPET_GEM_VERSION="~> 3.0"
+  - rvm: 1.9.3
+    env: PUPPET_GEM_VERSION="~> 3.0"
+  - rvm: 2.1.5
+    env: PUPPET_GEM_VERSION="~> 3.0"
