--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,17 @@
-sudo: false
-branches:
-  only:
-  - master
 language: ruby
+sudo: false
 script:
-  - "bundle exec rake validate && bundle exec rake lint && bundle exec rake spec SPEC_OPTS='--format documentation'"
+  - "bundle exec rake lint spec SPEC_OPTS='--format documentation'"
+script:
+  - "bundle exec rake lint spec SPEC_OPTS='--format documentation'"
 matrix:
   fast_finish: true
   include:
   - rvm: 1.8.7
-    env: PUPPET_GEM_VERSION="~> 3.0"
+    env: PUPPET_GEM_VERSION="~> 2.7.23" FACTER_GEM_VERSION="~> 1.6.10"
   - rvm: 1.9.3
-    env: PUPPET_GEM_VERSION="~> 3.0"
-  - rvm: 2.1.5
-    env: PUPPET_GEM_VERSION="~> 3.0"
+    env: PUPPET_GEM_VERSION="~> 3.1.0"
+  - rvm: 2.1.2
+    env: PUPPET_GEM_VERSION="~> 3.7.2" FACTER_GEM_VERSION="~> 2.2.0"
+  - rvm: 2.1.4
+    env: STRICT_VARIABLES="yes"
