--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: ruby
 sudo: false
 script:
-  - "bundle exec rake lint spec SPEC_OPTS='--format documentation'"
-script:
-  - "bundle exec rake lint spec SPEC_OPTS='--format documentation'"
+  - "bundle exec rake validate && bundle exec rake lint && bundle exec rake spec SPEC_OPTS='--format documentation'"
 matrix:
   fast_finish: true
   include:
